kubernetes/argocd/applications/media/apps/bazarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
  labels:
    route.scope: internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/guarded: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Bazarr
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/href: https://bazarr.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=bazarr
    gethomepage.dev/widget.type: bazarr
    gethomepage.dev/widget.url: http://bazarr.media.svc.cluster.local
    gethomepage.dev/widget.key: PLACEHOLDER_API_KEY
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - bazarr.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
      backendRefs:
        - group: ""
          kind: Service
          name: bazarr
          port: 6767
          weight: 1
